*zarr-2.10.3 (09 Feb 2022)

  09 Feb 2022;  <chymera@gentoo.org> +metadata.xml, +zarr-2.10.3.ebuild:
  dev-python/zarr: new package (DANDI stack)  tests fail